# cpp_project_template

./: .gitignore  CMakeLists.txt  README.md
cmake/: boost.cmake  boost_tests.cmake  clang_analyzer.cmake
src/: main.cpp  myclass.h
test/: myclass_test.cpp
